--- a/trunk/promotion/development/pisi/PiSi.lyx
+++ b/trunk/promotion/development/pisi/PiSi.lyx
@@ -913,11 +913,21 @@ PiSi package comes with a COMAR management script manager.py that is registered
  to COMAR's database when the PiSi's own package is installed.
  By using this script's services over COMAR, it is possible to do root privilege
 d package operations.
- Package-Manager, the PiSi frontend use these services to install, remove,
+ Package-Manager, the PiSi frontend uses these services to install, remove,
  upgrade packages or add/remove new repositories to PiSi database.
- The authentication is done by the COMAR daemon.
- With COMAR providing these services, it is also possible to remotely manage
- the package system of the machine.
+ The authorization is done by the COMAR daemon.
+ By extending these services, it is also possible to remotely manage the
+ package system of any machine.
+\end_layout
+
+\begin_layout Standard
+\begin_inset Graphics
+	filename package-manager.png
+	rotateOrigin center
+
+\end_inset
+
+
 \end_layout
 
 \begin_layout Subsection*
